build(quality): enforce zero compiler warnings and harden Checkstyle for main and test sources